# clear-editor

./: .gitignore  AGENTS.md  ANCHORED_SUMMARY.md  README.en.md  clear-editor.py  clear_editor.py  config.json  main.py  plan_plug_manager.txt  pyproject.toml  readme.md  recommendations.txt  run_tests.sh  task.txt  tests.py
core/: editor_app.py  ext_editor.py  file_editor.py  msg_panel.py  tab_panel.py
core/models/: file_tab_models.py  html_editor_model.py  message_model.py
core/services/: config_service.py  file_tab_srv.py  menu_service.py  message_srv.py  theme_service.py  zoom_service.py
docs/: CHANGELOG.md  architecture.en.html  architecture.ru.html  architecture_concepts.txt  educational_project_plan.en.html  educational_project_plan.ru.html  master_plan.txt  memo.txt  plan_editor_app.txt  plan_menu_service.txt  plan_msg_srv.txt  plan_plug_manager.txt  plan_plugins.txt  session_status.md  todo.txt
extensions/: base_extension.py  word_search.py
lib/: editor_ext.py  editorlib.py  file_editor.py  file_tab_editor.py  file_tab_panel.py  iclear.py  msg_panel.py  text_editor.py  wclearnav.py
libiclear/: iclear.py  iclearhtml.py  wiclear.py
plugins_service/: plugin_base.py  plugin_manager.py  plugin_widget.py
resources/: templates.json
scripts/: status.sh
specifications/: editor_app_spec.txt  ext_editor_spec.txt  file_editor_spec.txt  main_spec.txt  message_spec.txt  msg_spec.txt  plugins_service_spec.txt  plugins_spec.txt  tab_panel_spec.txt  todo.txt
tests/: test_document.py  test_file_edit.py  test_msg_panel.py  test_tab_panel.py
(+88 files in other folders)
