[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "clear-editor"
version = "0.1.0"
description = "Desktop text editor on PyQt5 with dynamic plugin loading"
requires-python = ">=3.9"
dependencies = [
    "PyQt5",
]

[tool.setuptools.packages.find]
include = ["core", "core.*", "plugins_service", "plugins_service.*"]
